# rjaws

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  objsample.txt  proj.todo.md
src/: aws_handler.rs  commands.rs  e_output_format.rs  error.rs  main.rs  matrix_output.rs  t_aws_handler.rs  t_command.rs  t_ec2_instance.rs  t_tabulatable.rs  tabulatable.rs  textutils.rs  tui.rs
src/commands/: command.rs  ec2.rs  gci.rs  matrix_test_command.rs  mod.rs  res.rs  ssm.rs
src/errors/: jaws_error.rs
src/matrix_handlers/: mod.rs  t_json_output.rs  t_matrix_output.rs  t_matrix_output_driver.rs  t_tabular_output.rs  tr_matrix_output_handler.rs
src/models/: mod.rs
