[package]
name = "rjaws"
version = "3.2.0-PRE"
edition = "2021"

[[bin]]
name = "jaws"
path ="src/main.rs"

[dependencies]
# General Dependencies
tokio = { version = "1.39", features = ["full"] }   # Required for AWS
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
colored = "2"
tabled = "0.16"
termion = "4"
subprocess = "0.2"
signal-hook = "0.3"
chrono = "0.4"
serde_json = "1.0"
rusty-money = "0.4"
rust_decimal = "1.36"
terminal_size = "0.4"

sprintf = "0.3"
whoami = "1.5"

# AWS Dependencies
aws-config = "1.5"
aws-sdk-sts = "1.17"
aws-sdk-ec2 = "1.26"
aws-sdk-iam = "1.17"
aws-sdk-ssm = "1.19"
aws-sdk-pricing = "1.19"

aws-smithy-types-convert = { version = "0.60.8", features = ["convert-chrono"] }
